--- a/fe/package.json
+++ b/fe/package.json
@@ -1,15 +1,31 @@
 {
   "name": "fe",
   "version": "0.0.1-SNAPSHOT",
-  "description": "",
+  "description": "Budget app",
   "main": "./app",
   "scripts": {
-    "build": "webpack -p"
+    "build": "webpack -p",
+    "start": "./node_modules/.bin/webpack-dev-server --progress --colors --hot --config ./webpack.config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "1.12.9",
-    "webpack-dev-server": "1.14.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "react-hot-loader": "^1.3.1",
+    "webpack": "^3.5.6",
+    "webpack-dev-server": "^2.8.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eslawski/react-sandbox.git"
+  },
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-bootstrap": "^0.31.3",
+    "react-dom": "^15.6.1"
   }
 }
