--- a/fe/pom.xml
+++ b/fe/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.tmp</groupId>
+  <groupId>com.fifty.thirty.twenty</groupId>
   <artifactId>fe</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -12,7 +12,7 @@
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
-        <version>0.0.27</version>
+        <version>1.3</version>
 
         <executions>
 
@@ -22,8 +22,8 @@
               <goal>install-node-and-npm</goal>
             </goals>
             <configuration>
-              <nodeVersion>v4.2.1</nodeVersion>
-              <npmVersion>3.5.3</npmVersion>
+              <nodeVersion>v6.11.3</nodeVersion>
+              <npmVersion>5.4.2</npmVersion>
             </configuration>
           </execution>
 
