--- a/fe/package.json
+++ b/fe/package.json
@@ -4,18 +4,27 @@
   "description": "Budget app",
   "main": "./app",
   "scripts": {
-    "build": "webpack -p",
+    "build": "webpack -d",
     "start": "./node_modules/.bin/webpack-dev-server --progress --colors --hot --config ./webpack.config.js"
   },
   "author": "",
   "license": "ISC",
+  "babel": {
+    "presets": [
+      "es2015",
+      "react",
+      "stage-2"
+    ]
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "file-loader": "^0.11.2",
     "react-hot-loader": "^1.3.1",
+    "react-to-html-webpack-plugin": "^2.2.0",
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.8.0"
   },
