--- a/fe/package.json
+++ b/fe/package.json
@@ -33,8 +33,10 @@
     "url": "https://github.com/eslawski/react-sandbox.git"
   },
   "dependencies": {
+    "history": "^4.7.2",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.3",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2"
   }
 }
