--- a/fe/package.json
+++ b/fe/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "history": "^4.7.2",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2"
